# kestrel

./: Cargo.toml  README.md
examples/: client.rs  connection.rs  socket.rs
src/: connection.rs  consts.rs  fragment.rs  fragment_combiner.rs  lib.rs  misc.rs  socket.rs  udp_message.rs
